kubernetes/workloads/calibre/resources/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: calibre
  namespace: calibre
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`calibre-gui.dominiksiejak.pl`)
      kind: Rule
      middlewares:
        - name: crowdsec-bouncer
          namespace: traefik
        - name: secure-headers
          namespace: traefik
        - name: authentik
          namespace: traefik
      services:
        - name: calibre
          port: 8080
    - match: Host(`calibre.dominiksiejak.pl`)
      kind: Rule
      middlewares:
        - name: crowdsec-bouncer
          namespace: traefik
        - name: secure-headers
          namespace: traefik
      services:
        - name: calibre-web-automated
          port: 8083
    - match: Host(`calibre-api.dominiksiejak.pl`)
      kind: Rule
      middlewares:
        - name: crowdsec-bouncer
          namespace: traefik
        - name: secure-headers
          namespace: traefik
      services:
        - name: calibre-web-automated
          port: 8083
  tls: {}
